src/assets/styles/components/CarouselHeader.scss
.fixTop {
  margin-left: 12.5%;
  margin-right: 12.5%; 
  margin-top: 150px;
  .carousel-indicators {
        right: 80%;
        // left: 0;
  }

  .carousel-item {
    position: relative;
    height: 70vh;
    transition: all 0.5s ease;
  }

  // margin-top: -25px;
  .carousel-image {
    position: absolute;
    width: 50%;
    top: 0;
    right: 0;
    height: 100%;
    object-fit: fill;
  }

  .carousel-caption {
    position: absolute;
    width: 50%;
    top: 50%;
    left: 0;
    transform: translate(0, -50%);
    padding: 0 50px;

    h3 {
      color: #192847;
      text-transform: uppercase;
      text-align: left;
      font-weight: bold;
      font-size: 30px;
    }

    p {
      color: #192847;
      text-align: right;
      font-size: 1.2vw;
      margin-top: 1.2vw;
    }

    .button-dark-blue {
        background-color: #192847;
        color: #F1FCFE;
        padding: 1rem;
        min-width: 30%;
        font-size: 1.2vw;
        font-weight: 700;
        margin-left: 70%;
    }
  }
}

.carousel-bg {
  background-color: #F1FCFE;
}

